# mir

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FALSE_POSITIVES_ROADMAP.md  MEMORY_OPTIMIZATION_ROADMAP.md  README.md  ROADMAP.md  S4_TRACKED_QUERY_ANALYSIS.md  SALSA_MIGRATION.md  book.toml  composer.json  deny.toml
crates/mir-analyzer/: Cargo.toml  build.rs
crates/mir-analyzer/benches/: analyze_real_world.rs  download-fixtures.sh  incremental_workload.rs
crates/mir-analyzer/examples/: cold_references_bench.rs  fileanalyzer_retry_bench.rs
crates/mir-analyzer/src/: analyzer_db.rs  arena.rs  attributes.rs  batch.rs  body_analysis.rs  cache.rs  call.rs  class.rs  collector.rs  composer.rs  context.rs  contradiction.rs  db.rs  dead_code.rs  diagnostics.rs  expr.rs  file_analyzer.rs  flow_state.rs  generic.rs  indexing.rs  lib.rs  metrics.rs  narrowing.rs  parse_cache.rs  pass1_cache.rs  pass2.rs  php_version.rs  prelude.rs  project.rs  session.rs  shared_db.rs  source_provider.rs  stmt.rs  stub_cache.rs  stubs.rs  subtype.rs  suppression.rs  symbol.rs  taint.rs  test_utils.rs  (+2 more)
crates/mir-analyzer/src/batch/: lazy.rs  mod.rs  run.rs
crates/mir-analyzer/src/body_analysis/: aggregates.rs  classes.rs  functions.rs  mod.rs  orchestration.rs
crates/mir-analyzer/src/call/: args.rs  array_builtins.rs  callable.rs  function.rs  method.rs  mod.rs  opaque_callback.rs  static_call.rs
crates/mir-analyzer/src/class/: cycles.rs  members.rs  mod.rs  overrides.rs
crates/mir-analyzer/src/collector/: annotation.rs  class.rs  enum.rs  function.rs  interface.rs  mod.rs  resolution.rs  trait.rs  version_attrs.rs
crates/mir-analyzer/src/db/: ancestors.rs  deps.rs  find_queries.rs  inferred_types.rs  mirdb.rs  mod.rs  nodes.rs  per_function.rs  queries.rs  ref_index.rs  reference_locations.rs  resolver.rs  scopes.rs  subtype_index.rs  tests.rs  workspace.rs
crates/mir-analyzer/src/expr/: arrays.rs  assignment.rs  binary.rs  casts.rs  closures.rs  conditional.rs  helpers.rs  intrinsics.rs  literals.rs  mod.rs  objects.rs  unary.rs  variables.rs
crates/mir-analyzer/src/narrowing/: assertions.rs  class_const_compare.rs  class_introspection.rs  core.rs  enum_class.rs  instanceof_core.rs  instanceof_disjuncts.rs  literals.rs  mod.rs  strings.rs  type_fn.rs
crates/mir-analyzer/src/parser/: docblock.rs  mod.rs  type_from_hint.rs
crates/mir-analyzer/src/session/: incremental.rs  ingest.rs  loading.rs  mod.rs  queries.rs  stubs.rs
crates/mir-analyzer/src/stmt/: control_flow.rs  declarations.rs  expressions.rs  flow.rs  loops.rs  mod.rs  return_type.rs
crates/mir-analyzer/stubs/: UPSTREAM_REV
crates/mir-analyzer/stubs/Core/: Core.php  Core_c.php
crates/mir-analyzer/stubs/Reflection/: ReflectionAttribute.php  ReflectionClass.php  ReflectionClassConstant.php  ReflectionEnumBackedCase.php  ReflectionEnumUnitCase.php  ReflectionExtension.php  ReflectionFunction.php  ReflectionFunctionAbstract.php  ReflectionGenerator.php  ReflectionIntersectionType.php  ReflectionMethod.php  ReflectionNamedType.php  ReflectionParameter.php  ReflectionProperty.php  ReflectionReference.php  ReflectionType.php  ReflectionUnionType.php  ReflectionZendExtension.php
crates/mir-analyzer/stubs/SPL/: SPL_f.php
crates/mir-analyzer/stubs/SQLite/: SQLite.php
crates/mir-analyzer/stubs/SimpleXML/: SimpleXML.php
crates/mir-analyzer/stubs/apcu/: stub.toml
crates/mir-analyzer/stubs/bz2/: bz2.php
crates/mir-analyzer/stubs/ctype/: ctype.php
crates/mir-analyzer/stubs/curl/: curl.php
crates/mir-analyzer/stubs/date/: date.php  date_c.php
crates/mir-analyzer/stubs/fileinfo/: fileinfo.php
crates/mir-analyzer/stubs/filter/: filter.php
crates/mir-analyzer/stubs/gd/: gd.php
crates/mir-analyzer/stubs/gettext/: gettext.php
crates/mir-analyzer/stubs/gmp/: gmp.php
crates/mir-analyzer/stubs/hash/: hash.php
crates/mir-analyzer/stubs/iconv/: iconv.php
crates/mir-analyzer/stubs/intl/: IntlChar.php  intl.php
crates/mir-analyzer/stubs/json/: json.php
crates/mir-analyzer/stubs/libxml/: libxml.php
crates/mir-analyzer/stubs/mbstring/: mbstring.php
crates/mir-analyzer/stubs/mysqli/: mysqli.php
crates/mir-analyzer/tests/: api_phase1_phase2.rs  autoload_files_lazy.rs  batch_index_resolution.rs  benchmark_noop_save.rs  cache_invalidation.rs  cache_invalidation_inference.rs  common.rs  concurrent_reference_cancel.rs  cross_vendor_lazy_load.rs  definition_positions.rs  fast_lane.rs  fast_lane_deny.txt  file_analyzer.rs  find_queries.rs  firewall_bench.rs  firewall_premise.rs  fixtures.rs  generic_receiver.rs  incremental_index.rs  incremental_reanalysis.rs  indexed_queries.rs  indexing_responsiveness.rs  infer_function_parity.rs  infer_function_perf.rs  infer_scope_parity.rs  inferred_generic_returns.rs  inline_suppression_cache.rs  intersection_types.rs  invalid_argument.rs  invalid_return_type.rs  lazy_load.rs  lazy_load_open_file.rs  measure_baseline.rs  measure_batch.rs  memo_bounds.rs  method_signature_mismatch.rs  packaging.rs  pass1_cache.rs  per_function_inference_size.rs  perf_analysis.rs  (+21 more)
crates/mir-cli/: Cargo.toml
crates/mir-cli/src/: analyze.rs  color.rs  composer.rs  config.rs  format.rs  main.rs  plugins.rs  report.rs
crates/mir-cli/tests/: color_output.rs
crates/mir-codebase/: Cargo.toml
crates/mir-codebase/src/: codebase.rs  definitions.rs  file_id.rs  interner.rs  lib.rs  members.rs  storage.rs
crates/mir-issues/: Cargo.toml
crates/mir-issues/src/: lib.rs
crates/mir-plugin/: Cargo.toml
crates/mir-plugin-example/: Cargo.toml
crates/mir-plugin-example/src/: lib.rs
crates/mir-plugin/src/: dylib.rs  lib.rs
crates/mir-plugin/tests/: psalm_bridge.rs
crates/mir-stubs-gen/: Cargo.toml
crates/mir-stubs-gen/src/: main.rs
crates/mir-test-utils/: Cargo.toml
crates/mir-test-utils/src/: lib.rs
crates/mir-types/: Cargo.toml
crates/mir-types/src/: atomic.rs  compact.rs  display.rs  lib.rs  location.rs  strings.rs  symbol.rs  union.rs
crates/mir-types/tests/: type_sizes.rs
crates/mir-wasm/: Cargo.toml
crates/mir-wasm/src/: lib.rs
(+5823 files in other folders)
