[workspace]
resolver = "2"
members = [
    "crates/mir-types",
    "crates/mir-issues",
    "crates/mir-codebase",
    "crates/mir-analyzer",
    "crates/mir-cli",
    "crates/mir-wasm",
]

[workspace.package]
version = "0.16.0"
edition = "2021"
license = "MIT"
authors = ["Jorg Sowa <jorg.sowa@gmail.com>"]
repository = "https://github.com/jorgsowa/mir"
homepage = "https://github.com/jorgsowa/mir"

[workspace.dependencies]
# Internal crates
mir-types      = { path = "crates/mir-types",      version = "0.16.0" }
mir-issues     = { path = "crates/mir-issues",     version = "0.16.0" }
mir-codebase   = { path = "crates/mir-codebase",   version = "0.16.0" }
mir-analyzer   = { path = "crates/mir-analyzer",   version = "0.16.0" }

# PHP parsing
php-rs-parser = "0.9.6"
php-ast       = "0.9.6"
bumpalo       = { version = "3", features = ["collections"] }

# Data structures
indexmap = { version = "2", features = ["serde"] }
smallvec = { version = "1", features = ["union", "serde"] }

# Concurrency
rayon   = "1"
dashmap = "6"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap        = { version = "4", features = ["derive"] }
indicatif   = "0.18"
owo-colors  = "4"

# Error handling
thiserror = "2"
anyhow    = "1"
toml      = "1"

# Diagnostics
miette = { version = "7", features = ["fancy"] }

# Hashing / caching
blake3  = "1"

[profile.release]
lto           = "thin"
codegen-units = 1
