[package]
name    = "mir-analyzer"
description = "Analysis engine for the mir PHP static analyzer"
version.workspace = true
edition.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true

[dependencies]
mir-types    = { workspace = true }
mir-issues   = { workspace = true }
mir-codebase = { workspace = true }
php-ast       = { workspace = true }
php-rs-parser = { workspace = true }
bumpalo       = { workspace = true }
indexmap      = { workspace = true }
rayon         = { workspace = true }
thiserror     = { workspace = true }
sha2          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
quick-xml     = "0.36"

[dev-dependencies]
mir-test-utils = { workspace = true }
mir-issues     = { workspace = true }
tempfile = "3.27.0"
