[package]
name    = "mir-analyzer"
description = "Analysis engine for the mir PHP static analyzer"
version.workspace = true
edition.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true

[dependencies]
mir-types    = { workspace = true }
mir-issues   = { workspace = true }
mir-codebase = { workspace = true }
php-ast       = { workspace = true }
php-rs-parser = { workspace = true }
php-lexer     = { workspace = true }
phpdoc-parser = { workspace = true }
dashmap       = { workspace = true }
indexmap      = { workspace = true }
rayon         = { workspace = true }
parking_lot   = { workspace = true }
thiserror     = { workspace = true }
blake3        = { workspace = true }
rustc-hash    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
bincode       = { workspace = true }
quick-xml     = "0.40"
salsa         = { workspace = true }

[build-dependencies]
rayon = { workspace = true }

[dev-dependencies]
mir-issues     = { workspace = true }
tempfile = "3.27.0"
criterion = { version = "0.8", features = ["html_reports"] }
mimalloc  = { workspace = true }

[[bench]]
name    = "analyze_real_world"
harness = false

[[bench]]
name    = "incremental_workload"
harness = false
