[package]
name        = "mir-php"
description = "Fast PHP static analyzer"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true
homepage.workspace  = true

[[bin]]
name = "mir"
path = "src/main.rs"

[dependencies]
mir-analyzer = { workspace = true }
mir-issues   = { workspace = true }
mir-codebase = { workspace = true }
clap         = { workspace = true }
indicatif    = { workspace = true }
owo-colors   = { workspace = true }
anyhow       = { workspace = true }
rayon        = { workspace = true }
serde_json   = { workspace = true }
quick-xml    = "0.36"
thiserror    = { workspace = true }
