[package]
name    = "mir-issues"
description = "Issue definitions and reporting for the mir PHP static analyzer"
version.workspace = true
edition.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true

[dependencies]
mir-types = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
owo-colors = { workspace = true }
