[package]
name    = "mir-plugin"
description = "Plugin API and registry for the mir PHP static analyzer"
version.workspace = true
edition.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true

[features]
default = []
# Load Rust plugins from cdylibs at runtime (not available on wasm).
dylib = ["dep:libloading"]
# Host Psalm PHP plugins in a `php` subprocess (not available on wasm).
psalm-bridge = ["dep:serde", "dep:serde_json"]

[dependencies]
mir-types   = { workspace = true }
mir-issues  = { workspace = true }
php-ast     = { workspace = true }
parking_lot = { workspace = true }
rustc-hash  = { workspace = true }
thiserror   = { workspace = true }
libloading  = { version = "0.8", optional = true }
serde       = { workspace = true, optional = true }
serde_json  = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.27.0"
