[package]
name        = "mir-stubs-gen"
description = "Codegen tool: transforms PHP stub files into Rust source for mir-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "mir-stubs-gen"
path = "src/main.rs"

[dependencies]
mir-codebase  = { workspace = true }
mir-analyzer  = { workspace = true }
php-rs-parser = { workspace = true }
bumpalo       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
bincode       = { workspace = true }
toml          = { workspace = true }
