[package]
name    = "mir-test-utils"
description = "Test helpers for mir integration tests"
version.workspace = true
edition.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true

[dependencies]
mir-analyzer = { workspace = true }
mir-issues   = { workspace = true }
