[package]
name    = "mir-types"
description = "Type system primitives for the mir PHP static analyzer"
version.workspace = true
edition.workspace = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true
homepage.workspace   = true

[dependencies]
smallvec = { workspace = true }
indexmap = { workspace = true }
serde    = { workspace = true, features = ["rc"] }
