[package]
name    = "mir-wasm"
version.workspace  = true
edition.workspace  = true
license.workspace  = true
publish  = false

[lib]
crate-type = ["cdylib"]

[dependencies]
mir-analyzer = { workspace = true }
wasm-bindgen = "0.2"
serde        = { workspace = true }
serde_json   = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
